--- a/gb/23/7/26/n14042146.md
+++ b/gb/23/7/26/n14042146.md
@@ -1,59 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>成大榕树满百年 “受保护树木”列管</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042147-626615-600x400.jpg" />
 <h6>成功大学榕园的老榕树展百年英姿。（台南市农业局提供）
 </h6>
 <hr>
-<p>【大纪元2023年07月26日讯】（大纪元记者赖友容台湾台南报导）成功大学榕园的老<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A6%95%E6%A0%91.md#1">榕树</a>于今年满百年了，台南市农业局依“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A3%AE%E6%9E%97%E6%B3%95.md#1">森林法</a>”公告的“受保护树木”列管，未经许可砍伐、移植、修剪或破坏受保护树木，将处60万元以下罚锾。</p>
-<p>台南市农业局26日举行记者会表示，办理树木普查及受理<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%80%81%E6%A0%91.md#1">老树</a>提报列管申请，去年经树木保护委员会审议通过，新增列管77株老树生力军，目前列管老树已累计至320个编号计352株。树木列管后，非经许可，管理人不得任意砍伐、移植、修剪或以其它方式破坏，并应维护其良好生长环境。</p>
-<figure id="14042148" aria-describedby="caption-14042148" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14042148-626616-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14042148-626616-450x338.jpg" alt="利用阻抗仪检测树木内部腐朽程度。" width="500" /></a><figcaption id="caption-14042148" class="wp-caption-text">利用阻抗仪检测树木内部腐朽程度。（台南市农业局提供）</figcaption></figure>
-<p>这次新增的77株列管<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%80%81%E6%A0%91.md#1">老树</a>中，有45株是首次依“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A3%AE%E6%9E%97%E6%B3%95.md#1">森林法</a>”公告“受保护树木”，列管资格与违规罚则比“台南市珍贵树木保护自治条例”公告“珍贵树木”更严格。例如受保护树木树龄须达100年（包括<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%90%E5%A4%A7.md#1">成大</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A6%95%E6%A0%91.md#1">榕树</a>）、珍贵树木则是须达80年；未经许可砍伐、移植、修剪或破坏受保护树木，处12万元以上60万元以下罚锾；珍贵树木则是处3万元以上10万元以下罚锾。</p>
+<p>【大纪元2023年07月26日讯】（大纪元记者赖友容台湾台南报导）成功大学榕园的老榕树于今年满百年了，台南市农业局依“森林法”公告的“受保护树木”列管，未经许可砍伐、移植、修剪或破坏受保护树木，将处60万元以下罚锾。</p>
+<p>台南市农业局26日举行记者会表示，办理树木普查及受理老树提报列管申请，去年经树木保护委员会审议通过，新增列管77株老树生力军，目前列管老树已累计至320个编号计352株。树木列管后，非经许可，管理人不得任意砍伐、移植、修剪或以其它方式破坏，并应维护其良好生长环境。</p>
+<figure id="14042148" aria-describedby="caption-14042148" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14042148-626616-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042148-626616-450x338.jpg" alt="利用阻抗仪检测树木内部腐朽程度。" width="500" /></a><figcaption id="caption-14042148" class="wp-caption-text">利用阻抗仪检测树木内部腐朽程度。（台南市农业局提供）</figcaption></figure>
+<p>这次新增的77株列管老树中，有45株是首次依“森林法”公告“受保护树木”，列管资格与违规罚则比“台南市珍贵树木保护自治条例”公告“珍贵树木”更严格。例如受保护树木树龄须达100年（包括成大榕树）、珍贵树木则是须达80年；未经许可砍伐、移植、修剪或破坏受保护树木，处12万元以上60万元以下罚锾；珍贵树木则是处3万元以上10万元以下罚锾。</p>
 <p>农业局长李建裕表示，本次新增45株受保护树木，32株珍贵树木，树种以榕树26株最多，金龟树11株居次，雨豆树6株居第三；数量以中西区、东区各24株最多，北区12株居次，山上区5株居第三。</p>
 <p>他说，针对列管老树，农业局每年进行健康检查，依树木生长状况，办理栖地改善、修剪、病虫害防治、支架及拉撑等养护措施。另健检评估为高风险的老树，则请专家利用非破坏性仪器检测树木内部腐朽程度，依专家建议给予适当处置，改善树木健康以降低树木风险性。</p>
 <p>农业局为保护珍贵树木，2013年成立珍贵树木保育志工队，订定树木认养机制，目前计有39位珍贵树木志工，每个月协助巡视所认养树木，若发现树势衰退或发生病虫害，立即通报农业局进行处置与养护，借着定期巡护，追踪老树健康。◇</p>
 <p>责任编辑：昌英</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/14/n10056916.md#1">五酒桶山辟公园 桃园护树团体抗议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/2/n10354767.md#1">桃园推动树木保护自治条例  展现保护树木决心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/19/n11196485.md#1">东港榕树公园新气象 型塑宜兰魅力河段新亮点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/17/n12192052.md#1">阻树木修剪断头乱象 立委要求修森林法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/1/n12444803.md#1">老榕树上的童年梦 台东布农树屋探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/6/8/n13007327.md#1">将军之屋老榕树染病倾倒 屏县全面老树健检</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014601.md#1">三地门德莱公园雀榕树成功救治 期再展生机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045821.md#1">归仁释迦夏季上市 热销抢购进行中</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043644.md#1">不怕杜苏芮台风侵袭 麻豆文旦落果5%内</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042205.md#1">奇美医首创电子医疗收据 月减10万张列印</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/14/n10056916.md#1">五酒桶山辟公园 桃园护树团体抗议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/2/n10354767.md#1">桃园推动树木保护自治条例  展现保护树木决心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/19/n11196485.md#1">东港榕树公园新气象 型塑宜兰魅力河段新亮点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/6/17/n12192052.md#1">阻树木修剪断头乱象 立委要求修森林法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/1/n12444803.md#1">老榕树上的童年梦 台东布农树屋探秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/6/8/n13007327.md#1">将军之屋老榕树染病倾倒 屏县全面老树健检</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/12/n14014601.md#1">三地门德莱公园雀榕树成功救治 期再展生机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309663.md#1">搁浅货轮成热门景点 地方建议就地保留助观光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309644.md#1">爱心助社福团体 庇护工场中秋礼品开卖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308065.md#1">2024菱角鸟调查达1664只 台风是最大杀手</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/4/n11701121.md#1" target="_blank">宁静：中共改编《天仙配》摧毁孝道败坏人伦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/7/n10121258.md#1" target="_blank">郑克中：北大“文革”二三事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/29/n12219807.md#1">26省市遭洪灾 官媒承认三峡大坝泄洪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/27/n12216091.md#1">【内幕】六常委分歧 习决意暂不与美签约</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/29/n12220225.md#1">【役情最前线】香港坠落 朱镕基震怒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/30/n12220995.md#1">中共威胁将限制美国人签证 蓬佩奥回击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/29/n12219887.md#1">钟原：政治局“云会议”泄七常委分散保命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/29/n12220609.md#1">为救汪小菲事业八折卖豪宅？大S经纪人回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/29/n12219022.md#1">传黄秋生拍宣传片喊价228万？北市观传局回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/29/n12220251.md#1">汪峰49岁生日 章子怡携女儿跳萤光舞送祝福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/30/n12222874.md#1">中共通过港版国安法 何韵诗脸书发文诉心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/29/n12220365.md#1">与黄秋生合演新片香港开红盘 林嘉欣发表感言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/27/n12215574.md#1">《地母经》预言的2020年中国水灾和后果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/12/1/21/n3492348.md#1">令人感动千年    范仲淹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/29/n12219023.md#1">北京冰雹状似中共病毒 这是末日预兆？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/3/19/n3202908.md#1">历史故事：范蠡知进退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/24/n12209542.md#1">药王孙思邈的预言神通</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306694.md#1">【人妻日常】突破难熬的磨合期</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/26/n14042146.htm">成大榕树满百年 “受保护树木”列管</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042146.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/26/n14042146.htm">成大榕树满百年 “受保护树木”列管</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/26/n14042146.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
